--- a/web/themes/custom/lex/scss/molecules/_event_card.scss
+++ b/web/themes/custom/lex/scss/molecules/_event_card.scss
@@ -1,65 +1,36 @@
 .event-card {
-    height: 150px;
     background-color: color(med-blue);
     color: color(white);
-    width: 350px;
+    float: left;
+    height: 150px;
     margin: 10px;
-    float: left;   
-
-    @include screens-below(sm) {
-        width: 100% !important;
-        margin: 10px 0;
-    }
-
-    .icon-col {
-        @include screens-below(xs) {
-            display: none;
-        }
-    }
+    width: 350px;
 
     img {
         height: 25px;
         width: 35px;
     }
-    .button-heading {
-        margin: 0 0 15px 0;
-        max-height: 50px;
-        color: color(white);
 
-        @include screens-above(xl) {
-            font-size: 20px !important;
-        }
-    }
     .row {
         padding-top: 15px;
     }
 
     .button-heading {
-        border-bottom: 1px solid color(white);
-        font-size: 1.1em;
-        padding-bottom: 10px;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        color: color(white);
+        font-size: 20px;
+        margin: 0 0 15px 0;
+
+        @include lineclamp($lines: 2);
     }
 
     .description {
-        font-size: 1em;
-        overflow: hidden;
-        text-overflow: ellipsis;
-        display: -webkit-box;
-        -webkit-line-clamp: 2;
-        -webkit-box-orient: vertical;
+        font-size: 18px;
 
-        @include screens-above(xl) {
-            font-size: 18px;
-        }
+        @include lineclamp($lines: 2);
     }
 
     .button-icon {
-        font-size: 1.6em;
+        font-size: 1.4em;
         margin-left: 10px;
     }
 
@@ -71,52 +42,19 @@
     .footer-text {
         a {
             color: #ffff;
-            font-size: 1em;
+            font-size: 16px;
             font-family: $font__roboto;
             margin-top: .4em;
             display: block;
-
-            &:hover {
-                text-decoration: none !important;
-                border-bottom: none !important;
-            }
         }
     }
 
      &:hover {
         background-color: #E1B111;
-        max-height: 175px;
         box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.55) !important;
-        
-        .row {
-            padding: 20px 0 5px;
-        }
-
-        .button-heading {
-            font-size: 1.2em;
-
-            @include screens-above(xl) {
-                font-size: 20px !important;
-            }
-        }
 
         .button-icon {
-                font-size: 1.8em;
-        }
-
-        .description {
-            font-size: 1.1em;
-            div {
-                padding-bottom: 15px;
-            }
-
-            @include screens-above(xl) {
-                font-size: 18px !important;
-            }
-        }
-
-        .button-arrow {
-            font-size: 1.1em;
+            transform: scale(1.01);
         }
     }
 }
@@ -127,10 +65,6 @@
         font-size: 2em;
         color: #004585;
         margin: 0 0 5px 12px;
-
-        @include screens-below(xs) {
-            margin-left: 0 !important;
-        }
     }
 
     .more-link {
@@ -143,28 +77,9 @@
         a {
             padding: 0.5em;
         }
-
-        @include screens-below(sm) {
-            margin: 10px 0 20px 0;
-        }
-    }
-
-    @include screens-above(xl) {
-        padding-left: 2em;
     }
 }
 
-.events-block {
-    .event-right {
-        @include screens-above(xl) {
-            float: right;
-        }
-
-        @include screens-above(xxl) {
-            margin-right: 15%;
-        }
-    }
-}
 
 .meetings-block {
     .event-card {
@@ -173,11 +88,5 @@
         &:hover {
             background-color: color(yellow);
         }
-    }
-}
-
-.home-meetings-block, .home-levents-block {
-    @media (min-width: 1200px) and (max-width: 1283px) {
-        max-width: 50%;
     }
 }
