--- a/web/themes/custom/lex/scss/molecules/_news_card.scss
+++ b/web/themes/custom/lex/scss/molecules/_news_card.scss
@@ -72,6 +72,7 @@
   }
 
   .contact-img-container {
+    overflow: hidden;
     width: 100%;
   }
 
@@ -82,6 +83,7 @@
 
   .description {
     color: color(dark-gray);
+    margin-bottom: 5px;
 
     @include lineclamp($lines: 3);
   }
@@ -116,30 +118,24 @@
 
   &:hover {
     background-color: #E1B111;
-    border: none;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.55) !important;
     color: #ffff;
-    position: relative;
-    transform: scale(1.01);
-    transition: all 0.3s;
-
+    transition: all 0.2s;
 
     .heading-container {
       border-bottom: 1px solid color(white);
     }
 
+    img {
+      transform: scale(1.01);
+    }
+
     .date-overlay {
       background-color: color(yellow) !important;
-      width: 27.5%;
-
-      @media (max-width: 400px) {
-        width: 32%;
-      }
     }
 
     .news-heading {
       color: #ffff;
-      margin-bottom: 12px;
     }
 
     .description {
@@ -148,8 +144,6 @@
 
     .news-footer {
       background-color: color(dark-blue);
-      border-radius: 0 0 5px 5px;
-      height: 40px;
     }
 
     .footer-text {
